--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ div.content {
     width: 99%;
     margin: 5px;
 }
+div.username {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    font-weight: bold;
+}
 body {
     font-family: Verdana, "Trebuchet MS", Helvetica;
     width: 99%;
