--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ table {
     border: 1px solid #333;
     border-collapse: collapse;
 }
+table tr.l {
+    background-color: #eee;
+}
 textarea {
     margin: 5px;
     width: 100%;
