--- a/style.css
+++ b/style.css
@@ -87,3 +87,8 @@ span.removed {
 span.file {
     font-weight: bold;
 }
+div.copy {
+    margin: 10px auto 20px auto;
+    color: #aaa;
+    font-size: 75%;
+}
