--- a/style.css
+++ b/style.css
@@ -53,9 +53,9 @@ a.rollback {
 }
 table thead tr td {
     font-weight: bold;
+    font-size: 80%;
 }
 table thead tr {
-    border: 1px solid #333;
     background-color: #eee;
 }
 table td {
