--- a/style.css
+++ b/style.css
@@ -37,13 +37,21 @@ div.history {
     border: 1px solid #777;
     background-color: #eee;
     padding: 10px;
+    height: 75px;
+    overflow: hidden;
 }
 div.history div {
     float: left;
     border: 1px solid #666;
-    background-color: #fff;
-    padding: 5px;
     margin: 8px;
+}
+div.history div a {
+    padding: 5px;
+    display: block;
+    background-color: #fff;
+}
+div.history div a:hover {
+    background-color: #9cf;
 }
 div.history div.select {
     border: 3px solid #666;
