--- a/style.css
+++ b/style.css
@@ -34,13 +34,16 @@ ul {
     margin: 10px 0 10px 0;
     padding: 0;
 }
+div.historycontainer {
+    overflow: auto;
+    width: 100%;
+}
 div.history {
-    list-style: none
+    list-style: none;
     border: 1px solid #777;
     background-color: #eee;
     padding: 10px;
     height: 45px;
-    overflow: auto;
 }
 div.history div {
     float: left;
