--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ ul {
 div.historycontainer {
     overflow: auto;
     width: 100%;
+    text-align: right;
 }
 div.history {
     border: 1px solid #777;
