--- a/style.css
+++ b/style.css
@@ -154,3 +154,20 @@ div.copy {
     font-size: 75%;
     margin: 20px 0 10px 0;
 }
+div#wait {
+    position: fixed;
+    z-index: 10;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: black;
+    opacity: 0.8;
+    text-align: center;
+    color: white;
+    padding: 50px;
+}
+div#wait img {
+    padding: 50px;
+}
+
